test/instance-checks-2.ktn
def example (a -> b): ->x x
